[package]
name = "kvs"
version = "0.1.0"
authors = ["chengzh2008"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
